test/invalid/literals2.anf
mod literals {
    val a = 'ab'
    val b = 'ŷ'
}
